<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node for Voter Info ViewModel -->

    <data>

        <variable
            name="voterInfoViewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ProgressBar
            android:id="@+id/pbLoader"
            style="?android:attr/progressBarStyle"
            showIfLoading="@{voterInfoViewModel.loader}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoData"
            showIfNoData="@{voterInfoViewModel.noDataFound}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- TODO: Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            showIfVoterInfo="@{voterInfoViewModel.voterInfoLD}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            android:theme="@style/ToolbarVoterInfo"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{voterInfoViewModel.electionLD.name}"
            tools:title="Election Name" />

        <!-- TODO: Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            showIfVoterInfo="@{voterInfoViewModel.voterInfoLD}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:text="@{voterInfoViewModel.electionLD.electionDay.toString()}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <!-- TODO: Add visual styling and content -->

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_header"
            showIfVoterInfo="@{voterInfoViewModel.voterInfoLD}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/election_information"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/state_locations"
            style="@style/LinkStyle"
            showIfLocations="@{voterInfoViewModel.voterInfoLD}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> voterInfoViewModel.openLocationsUrl()}"
            android:text="@string/voting_locations"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            style="@style/LinkStyle"
            showIfBallot="@{voterInfoViewModel.voterInfoLD}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> voterInfoViewModel.openBallotUrl()}"
            android:text="@string/ballot_information"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            showIfAddress="@{voterInfoViewModel.voterInfoLD}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/correspondence_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <!-- TODO: Add data binding -->
        <TextView
            android:id="@+id/address"
            showIfAddress="@{voterInfoViewModel.voterInfoLD}"
            textAddressFromVoterInfo="@{voterInfoViewModel.voterInfoLD}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="Correspondence header" />

        <!-- TODO: Add button to save election to Room -->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/idFollowElection"
            style="@style/ActionButton"
            showIfVoterInfo="@{voterInfoViewModel.voterInfoLD}"
            textToggleFollowVoterInfo="@{voterInfoViewModel.isElectionSavedLD}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/action_button_margin"
            android:onClick="@{() -> voterInfoViewModel.isElectionSavedLD() ? voterInfoViewModel.unfollowElection():voterInfoViewModel.followElection()}"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/follow_election"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>